# gh-actions-scaler

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: Configuration file format.md  Remaining action items.md  What is gh-actions-scaler?.md
docs/Excalidraw/: What is gh-actions-scaler? 2024-07-29 21.15.15.excalidraw.md
src/: config.rs  github.rs  lib.rs  machine.rs  main.rs
src/config/: resolver.rs
tests/: common.rs  config.rs  config_test_fixture.rs  machine.rs
tests/fixtures/config/: default_machine_runners_config.yaml  default_machine_runners_config_from_defaults.yaml  default_runner_machine.yaml  default_runners_config.yaml  duplicate_machine_id.yaml  empty.yaml  empty_machines.yaml  empty_name_prefix.yaml  empty_or_missing_personal_access_token.yaml  empty_or_missing_repo_url.yaml  env_var_substitution.yaml  file_substitution_non_existent_file.yaml  file_substitution_success.yaml  file_token_not_exist.yaml  file_token_permission_denied.yaml  file_token_resolve.yaml  generated_machine_id.yaml  invalid_personal_access_token.yaml  invalid_repo_url.yaml  machines_with_defaults.yaml  machines_without_defaults.yaml  minimal.yaml  one_machine.yaml  overridden_machine_runners_config.yaml  token_file  with_brace_token.yaml  with_not_exist_brace_token.yaml  with_token.yaml
