[package]
name = "gh-actions-scaler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dirs = "5.0.1"
log = "0.4.22"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
